add DELETE method for authentication, comment, and reply route
