# src/Interfaces/http/api/authentications/handler.js
@@ -1,4 +1,6 @@
+const DeleteAuthenticationUseCase = require("../../../../Applications/use_case/DeleteAuthenticationUseCase");
 const GetAuthenticationUseCase = require("../../../../Applications/use_case/GetAuthenticationUseCase");
+const RefreshAuthenticationUseCase = require("../../../../Applications/use_case/RefreshAuthenticationUseCase");
 const container = require("../../../../Infrastructures/container");
 
 async function postAuthenticationHandler(req, res, next) {
@@ -19,4 +21,32 @@ async function postAuthenticationHandler(req, res, next) {
   }
 }
 
-module.exports = postAuthenticationHandler;
+async function putAuthenticationHandler(req, res, next) {
+  const refreshAuthenticationUseCase = container
+    .getInstance(RefreshAuthenticationUseCase.name);
+  
+  try {
+    const accessToken = await refreshAuthenticationUseCase.execute(req.body);
+
+    res.json({
+      status: 'success',
+      data: {
+        accessToken,
+      }
+    });
+  } catch (error) {
+    next(error);
+  }
+}
+
+async function deleteAuthenticationHandler(req, res, next) {
+  const deleteAuthenticationUseCase = container
+    .getInstance(DeleteAuthenticationUseCase.name);
+  await deleteAuthenticationUseCase.execute(req.body);
+
+  res.json({
+    status: 'success',
+  });
+}
+
+module.exports = { postAuthenticationHandler, putAuthenticationHandler, deleteAuthenticationHandler };
