# src/Interfaces/http/api/comments/routes.js
@@ -1,8 +1,9 @@
 const express = require('express');
 const authenticateToken = require("../../../../Infrastructures/middleware/authenticateToken");
-const postCommentHandler = require("./handler");
+const { postCommentHandler, deleteCommentHandler } = require("./handler");
 const router = express.Router();
 
 router.post("/:threadId/comments", authenticateToken, postCommentHandler);
+router.delete("/:threadId/comments/:commentId", authenticateToken, deleteCommentHandler);
 
 module.exports = router;
