# src/Interfaces/http/api/replies/handler.js
@@ -1,4 +1,5 @@
 const AddReplyUseCase = require("../../../../Applications/use_case/AddReplyUseCase");
+const DeleteReplyUseCase = require("../../../../Applications/use_case/DeleteReplyUseCase");
 const container = require("../../../../Infrastructures/container");
 
 async function postReplyHandler(req, res, next) {
@@ -19,4 +20,23 @@ async function postReplyHandler(req, res, next) {
   }
 }
 
-module.exports = postReplyHandler;
+async function deleteReplyHandler(req, res, next) {
+  const deleteReplyUseCase = container.getInstance(DeleteReplyUseCase.name);
+
+  try {
+    await deleteReplyUseCase.execute(
+      req.params.threadId,
+      req.params.commentId,
+      req.params.replyId,
+      req.credentials.id
+    );
+
+    res.json({
+      status: 'success'
+    });
+  } catch (error) {
+    next(error);
+  }
+}
+
+module.exports = { postReplyHandler, deleteReplyHandler};
