# src/Interfaces/http/api/replies/routes.js
@@ -1,8 +1,9 @@
 const express = require("express");
 const authenticateToken = require("../../../../Infrastructures/middleware/authenticateToken");
-const postReplyHandler = require("./handler");
+const { postReplyHandler, deleteReplyHandler } = require("./handler");
 const router = express.Router();
 
 router.post("/:threadId/comments/:commentId/replies", authenticateToken, postReplyHandler);
+router.delete("/:threadId/comments/:commentId/replies/:replyId", authenticateToken, deleteReplyHandler);
 
 module.exports = router;
