# swagger/index.json
@@ -75,6 +75,109 @@
             }
           }
         }
+      },
+      "put": {
+        "tags": [
+          "Authentication"
+        ],
+        "summary": "Generate new access token",
+        "description": "Generate new access token",
+        "produces": [
+          "application/json"
+        ],
+        "consumes": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "description": "refresh token for generate new access token",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "refreshToken": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Regenerate access token successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "status": {
+                      "type": "string"
+                    },
+                    "data": {
+                      "type": "object",
+                      "properties": {
+                        "accessToken": {
+                          "type": "string"
+                        }
+                      }
+                    }
+                  }
+                },
+                "example": {
+                  "status": "success",
+                  "data": {
+                    "accessToken": "access_token"
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Authentication"
+        ],
+        "summary": "Delete authentication",
+        "description": "Delete authentication",
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "description": "refresh token",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "refreshToken": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Authentication deleted successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "status": {
+                      "type": "string"
+                    }
+                  }
+                },
+                "example": {
+                  "status": "success"
+                }
+              }
+            }
+          }
+        }
       }
     },
     "/users": {
@@ -329,6 +432,60 @@
         }
       }
     },
+    "/threads/:threadId/comments/:commentId": {
+      "delete": {
+        "tags": [
+          "Comment"
+        ],
+        "summary": "Delete comment",
+        "description": "Delete comment",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "threadId",
+            "schema": {
+              "type": "string"
+            },
+            "required": true,
+            "description": "thread ID containing the comment to be deleted"
+          },
+          {
+            "in": "path",
+            "name": "commentId",
+            "schema": {
+              "type": "string"
+            },
+            "required": true,
+            "description": "ID of the comment to delete"
+          }
+        ],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Comment deleted successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "status": {
+                      "type": "string"
+                    }
+                  }
+                },
+                "example": {
+                  "status": "success"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/threads/:threadId/comments/:commentId/replies": {
       "post": {
         "tags": [
@@ -426,6 +583,69 @@
                       "owner": "user-123"
                     }
                   }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/threads/:threadId/comments/:commentId/replies/:replyId": {
+      "delete": {
+        "tags": [
+          "Reply"
+        ],
+        "summary": "Delete reply",
+        "description": "Delete reply",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "threadId",
+            "schema": {
+              "type": "string"
+            },
+            "required": true,
+            "description": "ID of the thread containing the reply to be deleted"
+          },
+          {
+            "in": "path",
+            "name": "commentId",
+            "schema": {
+              "type": "string"
+            },
+            "required": true,
+            "description": "ID of the comment containing the reply to delete"
+          },
+          {
+            "in": "path",
+            "name": "replyId",
+            "schema": {
+              "type": "string"
+            },
+            "required": true,
+            "description": "ID of the reply to delete"
+          }
+        ],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Reply deleted successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "status": {
+                      "type": "string"
+                    }
+                  }
+                },
+                "example": {
+                  "status": "success"
                 }
               }
             }
